--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyvoices
-version = 0.1.dev0
+version = 0.2.0
 author = Robert Forkel and Hans-Jörg Bibiko
 author_email = dlce.rdm@eva.mpg.de
 description = Python library to curate "* Voices" data
